# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  hello_world.cpp
